--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
         <figure class="lead__figure">
           <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка вагона">
-          <figcaption>
-            <p class="lead__caption">ваша полка — верхняя</p>
-          </figcaption>
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
       <section class="intro section-container centering">
